# chk_defaced-rs

./: .gitignore  CODE_SNIPPET.md  Cargo.toml  LICENSE  README.md
examples/: atlas.rs  docx_html.rs  docxfont.rs  glyphmap.rs  noanchor.rs  pdffont.rs  render_docx.rs  specimen.rs  verify.rs
src/: atlas.rs  docx_glyph.rs  docx_html.rs  finding.rs  font.rs  glyph.rs  glyphmatch.rs  lib.rs  main.rs  metadata.rs  ocr.rs  pdf_glyph.rs  registry.rs  render.rs  specimen.rs  textdiff.rs  unicode.rs  visibility.rs
src/scan/: docx.rs  html.rs  mod.rs  pdf.rs
tests/: render_ocr.rs
